[package]
name = "value_unit"
version = "0.1.3"
edition = "2021"
description = "A crate for every unit imaginable. Also contains a handy macro"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FBastiaan04/value_unit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
